# svg-renderer

./: Cargo.toml
libs/: CMakeLists.txt  main.cpp
msdfgen-rs/: Cargo.toml  build.rs
msdfgen-rs/src/: bindings.cpp  bindings.h  lib.rs
svg-renderer/: Cargo.toml
svg-renderer/shaders/: simple.fs  simple.vs
svg-renderer/src/: main.rs
